<resources>
    <string name="app_name">Union Minimalistic</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="nim">NIM</string>
    <string name="save_profile">Save Profile</string>
    <string name="absen">Absen Masuk</string>
    <string name="timestamp">Timestamp</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="date">Date</string>
    <string name="absen_keluar">Absen Keluar</string>
</resources>