<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:gravity="center"
        >

    <TextView
        android:padding="25dp"
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/full_name"
        android:layout_below="@+id/nama"
        />
    <EditText
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nim"
        android:hint="@string/nim"
        android:layout_below="@+id/name"
        />

    <Button
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="@string/save_profile"
        android:layout_below="@+id/nim"
        android:backgroundTint="@color/black"
        />

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:layout_above="@+id/bottom_navigation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/red"
         />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu"
        />

</RelativeLayout>